Update version and release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release we focused on making pages load faster, and improved the way we handle back navigation.
+In this release we improved the onboarding experience to better welcome new users.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
