Update widget design (#488)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -211,7 +211,7 @@
     <string name="edit">Edit</string>
 
     <!-- Widget -->
-    <string name="searchWidgetTextHint">Search DuckDuckGo</string>
+    <string name="searchWidgetTextHint">Search Privately</string>
 
     <!-- Home Screen Shortcuts -->
     <string name="addToHome">Add to Home</string>
