--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release we improved the design of our widget and added a way to customize the app during the onboarding screens.
+In this release we improved the design of our widget.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
