Update release notes and bump version number in preparation for release

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release we improved the design of our widget.
+In this release, we improved our launch animation and fixed an issue where navigating forward or back could skip some sites.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
