--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we improved our launch animation and fixed an issue where navigating forward or back could skip some sites.
+In this release, we added an option to open images in a background tab, added site search support and a number of other enhancements and bugfixes.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
