Update release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we improved our data clearing by making it more thorough.
+In this release, we updated the data which is used to determine privacy practices in the privacy dashboard.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
