--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,8 @@
 
     <!-- AutoComplete Suggestions -->
     <string name="editQueryBeforeSubmitting">Edit query before searching</string>
-    <string name="settingsAutocompleteEnabled">Autocomplete Suggestions</string>
+    <string name="settingsAutocompleteEnabled">Show Autocomplete Suggestions</string>
+    <string name="settingsAutocompleteBookmarksEnabled">Include Bookmarked Sites</string>
 
     <!-- Opening external apps -->
     <string name="openExternalApp">Open External App</string>
@@ -163,6 +164,7 @@
     <string name="settingsHeadingGeneral">General</string>
     <string name="settingsHeadingOther">Other</string>
     <string name="settingsHeadingPrivacy">Privacy</string>
+    <string name="settingsHeadingAutocomplete">Autocomplete</string>
     <string name="settingsLightTheme">Light Theme</string>
     <string name="settingsAboutDuckduckgo">About DuckDuckGo</string>
     <string name="settingsVersion">Version</string>
