Update version notes for release

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-In this release, we fixed a bug which could cause problems when loading certain webpages.
+This release includes bug fixes and other improvements.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback
