--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-This release includes bug fixes and other improvements.
+In this release, we made it easier to add bookmarks and access them via app shortcuts.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback
